<refactor> <(index, fitoterapicos, about_project, pediatria, sobre)> <altera os textos "lorem impsum" para os textos corretos>

--- a/html/about_project.html
+++ b/html/about_project.html
@@ -64,16 +64,10 @@
         <div>
           <h2>ARTIGO CIENTÍFICO</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-            expedita, placeat possimus deleniti tempora incidunt consequuntur
-            quasi aperiam, nihil perferendis ab quos, architecto fugit!
-            Excepturi nostrum voluptates a ipsam ea!
+            Este artigo propõe uma exploração aprofundada e crítica sobre a concepção, desenvolvimento e avaliação de um Bulário Digital, representando uma evolução significativa no acesso e na disseminação de informações precisas sobre medicamentos. 
           </p>
           <p>
-            Maxime esse blanditiis architecto veritatis nulla labore quo libero
-            nam! Ducimus dolor asperiores quis eos atque ipsum ad inventore quod
-            incidunt libero possimus modi quam minima, suscipit exercitationem
-            sapiente omnis!
+            Em um cenário onde a tecnologia desempenha um papel fundamental na transformação de diversos setores, a área da saúde não fica atrás desse movimento. Confira já nosso Artigo Científico!
           </p>
         </div>
         <figure class="standard_artic">
@@ -87,10 +81,7 @@
         <section>
           <h2>ACESSE TAMBÉM</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus
-            iste minima, dignissimos sint tempore praesentium quis qui,
-            molestiae officia temporibus voluptatibus natus ad iure voluptates?
-            Debitis praesentium veritatis expedita corrupti?
+            Aqui estão listados os Artigos Científicos que foram usados de apoio para a construção do nosso Artigo:
           </p>
         </section>
         <div class="slider">
@@ -115,10 +106,7 @@
       <article class="agenda2030" id="agenda2030">
         <h2>AGENDA 2030</h2>
         <p class="description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-          voluptatibus itaque beatae rem ipsa. Eaque, at perferendis soluta ex
-          sunt laboriosam ducimus tempore itaque voluptatem quo, aut temporibus
-          quos magni?
+          A implementação do Bulário Digital não apenas moderniza a forma como as informações sobre medicamentos são disponibilizadas, mas também desempenha um papel crucial na concretização do ODS 3, almejando um mundo onde todos possam desfrutar de uma vida saudável e bem-estar, com acesso a recursos de saúde e informação. Este é um passo significativo na direção de um futuro mais saudável e sustentável, conforme programado pela Agenda 2030.
         </p>
         <div class="aspects">
           <div>
@@ -129,10 +117,7 @@
               />
             </figure>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
-              commodi delectus iusto quaerat odio necessitatibus a earum,
-              repellat incidunt unde ad at quibusdam, officia non fuga vero aut
-              impedit ex!
+              O Bulário Digital, ao ser uma ferramenta inclusiva e de fácil acesso, permite que comunidades remotas ou desfavorecidas tenham acesso a informações fundamentais. 
             </p>
           </div>
           <div>
@@ -143,10 +128,7 @@
               />
             </figure>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
-              commodi delectus iusto quaerat odio necessitatibus a earum,
-              repellat incidunt unde ad at quibusdam, officia non fuga vero aut
-              impedit ex!
+              Um instrumento eficaz na promoção da igualdade no acesso à informação e, consequentemente, na promoção da equidade em saúde.
             </p>
           </div>
           <div>
@@ -157,10 +139,7 @@
               />
             </figure>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
-              commodi delectus iusto quaerat odio necessitatibus a earum,
-              repellat incidunt unde ad at quibusdam, officia non fuga vero aut
-              impedit ex!
+              A digitalização do processo de fornecimento de informações sobre medicamentos melhora a eficiência dos serviços de saúde e aumentar a qualidade do atendimento. 
             </p>
           </div>
         </div>
@@ -170,16 +149,10 @@
         <div>
           <h2>ENTREVISTAS</h2>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
-            repudiandae veniam, vero praesentium ipsum itaque repellendus
-            voluptatum aut eum obcaecati sit provident numquam, architecto unde
-            dolor enim, voluptate debitis placeat.
+            Fizemos entrevistas com os estudantes de Farmácia pela  Universidade de São Paulo (USP), Lucas (19 anos), Júlia (18 anos) e João Vitor (18 anos).
           </p>
           <p>
-            Corrupti ipsam fugiat architecto nobis. Consectetur fugit tenetur
-            quae obcaecati voluptatem enim eligendi ipsam magnam, velit nihil
-            quibusdam dolorum aliquam quisquam, molestiae provident, architecto
-            voluptatibus sit molestias aspernatur vero! Nostrum?
+            Confira, ao lado, as entrevistas sobre o projeto com estudantes da USP!
           </p>
         </div>
         <div class="btn"><a href="./interview.html">ACESSE JÁ</a></div>
