--- a/html/fitoterapicos.html
+++ b/html/fitoterapicos.html
@@ -56,32 +56,17 @@
 
       <article class="importance">
         <div>
-          <h2>A IMPORTÂNCIA DOS CUIDADOS FITOTERÁPICOS</h2>
+          <h2>O QUE SÃO OS MEDICAMENTOS FITOTERÁPICOS?</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os medicamentos fitoterápicos são produtos fabricados a partir de vegetais ou plantas medicinais, que possuem propriedades terapêuticas. Eles podem ser utilizados para tratar diversas enfermidades, como glaucoma e diabetes, e também para questões relacionadas à ansiedade e depressão. Esses medicamentos são comercializados em várias formas farmacêuticas, como cápsulas, comprimidos, pomadas ou xaropes, e podem ser simples (feitos de uma única planta) ou compostos (com mais de uma planta).
           </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
-          </p>
-        </div>
-        <div>
-          <img src="../img/pediatria1.png" />
         </div>
       </article>
 
       <article class="carousel-container">
         <h3>EXPLORE</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-          ultrices convallis lectus, a varius orci gravida quis. Nunc non velit
-          non neque lobortis dignissim. Phasellus efficitur mi mattis commodo
-          ultricies.
+          Acesse o maior catálogo de bulas  digitais que você já viu! Tenha acesso a toda e qualquer bula a distância de um clique! 
         </p>
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
@@ -137,22 +122,13 @@
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS FITOTERÁPICOS</h2>
         <div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os fitoterápicos podem fortalecer o sistema imunológico, ajudando o corpo a combater vírus e bactérias e resistir a doenças comuns como gripes e resfriados.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Muitos fitoterápicos possuem propriedades anti-inflamatórias que podem ajudar na redução de inflamações, como as causadas por osteoporose ou artrite reumatoide, e também interromper a produção de agentes causadores de inflamação.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Alguns fitoterápicos são úteis no tratamento da ansiedade e depressão, contribuindo para a redução do nível de estresse causado por essas condições.
           </p>
         </div>
       </article>
