--- a/html/pediatria.html
+++ b/html/pediatria.html
@@ -57,16 +57,7 @@
         <div>
           <h2>A IMPORTÂNCIA DOS CUIDADOS PEDIÁTRICOS</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os medicamentos pediátricos são de extrema importância para a saúde e o bem-estar das crianças. Eles são formulados especificamente para atender às necessidades únicas dessa faixa etária, levando em consideração fatores como peso, metabolismo e estágio de desenvolvimento. O uso racional desses medicamentos é essencial para garantir a segurança dos pacientes pediátricos, bem como para fornecer tratamento eficaz para diversas condições médicas.
           </p>
         </div>
         <div>
@@ -77,10 +68,7 @@
       <article class="carousel-container">
         <h3>EXPLORE</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-          ultrices convallis lectus, a varius orci gravida quis. Nunc non velit
-          non neque lobortis dignissim. Phasellus efficitur mi mattis commodo
-          ultricies.
+          Acesse o maior catálogo de bulas  digitais que você já viu ! Tenha acesso a toda e qualquer bula a distância de um clique!
         </p>
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
@@ -136,22 +124,13 @@
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS PEDIATRIA</h2>
         <div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os medicamentos pediátricos passam por testes rigorosos para garantir que sejam seguros e eficazes para uso em crianças. Isso ajuda a evitar a extrapolação de dados de adultos para crianças, que podem ter respostas diferentes aos medicamentos.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Eles estão disponíveis em formas farmacêuticas adequadas para crianças, como líquidos, suspensões e mastigáveis, facilitando a administração e garantindo que as crianças possam tomar o medicamento de forma segura e confortável.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os medicamentos pediátricos são formulados para fornecer a dosagem correta com base no peso e na idade da criança, o que é crucial para a eficácia do tratamento e para minimizar os riscos de efeitos colaterais.
           </p>
         </div>
       </article>
