--- a/html/sobre.html
+++ b/html/sobre.html
@@ -56,16 +56,10 @@
         <h2>SOBRE NÓS</h2>
         <div class="text-sobre">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Criada com o objetivo de auxiliar e facilitar a informação das bulas de medicamentos, houve a criação da Wikimedic, o bulário digital que auxilia milhares de brasileiros no entendimento da bula de medicamentos. Disponibilizando uma linguagem adequada para o público leigo e dispondo todas as informações de forma correta
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Além do objetivo de facilitar o entendimento de uma bula comum, a criação da Wikimedic também segue o modelo da ODS (Objetivo de Desenvolvimento Sustentável) seguindo a terceira meta anual saúde e bem estar. 
           </p>
         </div>
       </article>
@@ -74,10 +68,7 @@
         <div class="information">
           <h2>CONHEÇA NOSSA EQUIPE</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, nemo
-            suscipit, accusantium reiciendis cumque quaerat voluptatem in ad,
-            quo doloremque perferendis numquam. Rem repellendus quas optio
-            laborum tenetur debitis. Ratione.
+            Conheça a <strong>Equipe Wikimedic</strong>, a equipe responsável pela idealização, construção e realização desse incrível projeto!
           </p>
         </div>
         <div class="slider">
@@ -128,16 +119,7 @@
         <h2>VISÃO</h2>
         <div class="text-sobre">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Visando o crescimento do site e do nosso público, a Wikimedic espera o crescimento de seu reconhecimento como um dos bulários mais importantes do país, tendo em vista o comprometimento com a segurança e a ética nessa área da saúde.
           </p>
         </div>
       </article>
@@ -154,16 +136,10 @@
         <h2>VALORES</h2>
         <div class="text-sobre">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Seguindo os princípios do bulário digital, sendo estes a tecnologia, público consumidor da plataforma, segurança e ética, contendo tudo isso a distância de um clique em um plataforma de navegação. 
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Nós, criadores deste bulário acreditamos que a ética junto a tecnologia implementada no site, foi o principal influenciador em sua criação, sendo assim seus maiores princípios.
           </p>
         </div>
         <div class="icons">
@@ -174,7 +150,7 @@
                 alt="Ícone de duas mão se cumprimentando"
               />
             </figure>
-            <p>Lorem ipsum.</p>
+            <p>Tecnologia</p>
           </div>
 
           <div>
@@ -184,14 +160,14 @@
                 alt="Ícone de um remédio sobre uma mão"
               />
             </figure>
-            <p>Lorem ipsum.</p>
+            <p>Segurança</p>
           </div>
 
           <div>
             <figure>
               <img src="../img/drug.png" alt="Ícone de um remédio" />
             </figure>
-            <p>Lorem ipsum.</p>
+            <p>Informação</p>
           </div>
         </div>
       </article>
