--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <article class="information">
         <p>
-          l
+          O bulário digital mais eficiente do país, com mais de mil bulas digitais disponíveis,. Além disso, o bulário contém a disposição facilitada para auxiliar todo tipo de paciente com dificuldade nas bulas digitais comum. Formando um combo de informação, tecnologia e saúde, tudo ao alcance de um clique!
         </p>
         <section>
           <div>
@@ -105,10 +105,7 @@
             </p>
           </div>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas
-            voluptas error vel soluta labore assumenda molestias veniam
-            doloribus harum odio, voluptatem tenetur, quisquam dicta temporibus
-            sit amet quibusdam quidem impedit.
+            Sabemos que com saúde não se pressupõe nenhuma informação, por isso seguindo nossa ética e segurança, aqui temos todas as informações e estudos necessários para a construção do bulário. Acesse e saiba mais!
           </p>
         </section>
 
@@ -116,16 +113,10 @@
           <h2>ÉTICA, SEGURANÇA E TECNOLOGIA</h2>
           <div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
-              iste minus veritatis aperiam. Ipsum, doloremque aliquam debitis
-              qui magnam soluta vero ipsa. Aspernatur quaerat, quibusdam dolores
-              quas velit sunt neque!
+              Conforme a visão da empresa, a Wikimedic se propõe como um bulário digital, sendo uma ponte para a informação com segurança e a ética presente em cada bula de medicamento apresentada ao nosso público .
             </p>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint et
-              veritatis, non eos quaerat tenetur doloribus voluptatum voluptas
-              libero ex tempore neque, commodi exercitationem eveniet laborum
-              cum id illo eius.
+              Utilizando da tecnologia como uma aliada nesse mundo atual, a crianção de uma bula digital facilitadora para o público leigo utiliza sua vantagem para espalhar informação de forma segura e objetiva.
             </p>
           </div>
         </section>
