<refactor> <(alopaticos, gnericos, homeopaticos, similares)> <altera os txtos "lorem impsum" para os textos do design>

--- a/html/alopaticos.html
+++ b/html/alopaticos.html
@@ -56,32 +56,17 @@
 
       <article class="importance">
         <div>
-          <h2>A IMPORTÂNCIA DOS CUIDADOS ALOPÁTICOS</h2>
+          <h2>O QUE SÃO OS MEDICAMENTOS ALOPÁTICOS </h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os medicamentos alopáticos são aqueles que atuam no sentido contrário à doença, combatendo suas causas no organismo e agindo para eliminação dos sintomas. Eles são a base da medicina moderna e incluem a maior parte dos medicamentos comercializados em farmácias, como antibióticos, anti-inflamatórios, analgésicos, entre outros.
           </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
-          </p>
-        </div>
-        <div>
-          <img src="../img/pediatria1.png" />
         </div>
       </article>
 
       <article class="carousel-container">
         <h3>EXPLORE</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-          ultrices convallis lectus, a varius orci gravida quis. Nunc non velit
-          non neque lobortis dignissim. Phasellus efficitur mi mattis commodo
-          ultricies.
+          Acesse o maior catálogo de bulas  digitais que você já viu! Tenha acesso a toda e qualquer bula a distância de um clique!
         </p>
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
@@ -137,22 +122,13 @@
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS ALOPÁTICOS</h2>
         <div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os medicamentos alopáticos passam por rigorosos testes clínicos e são aprovados por agências reguladoras, garantindo sua eficácia no tratamento de diversas doenças
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Além de tratar doenças, alguns medicamentos alopáticos são usados na prevenção, como vacinas e medicamentos para reduzir o risco de doenças crônicas.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Eles são projetados para agir rapidamente no alívio dos sintomas, proporcionando conforto em curto prazo
           </p>
         </div>
       </article>
