--- a/html/genericos.html
+++ b/html/genericos.html
@@ -56,32 +56,17 @@
 
       <article class="importance">
         <div>
-          <h2>A IMPORTÂNCIA DOS CUIDADOS GENÉRICOS</h2>
+          <h2>O QUE SÃO OS MEDICAMENTOS GENÉRICOS ?</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os medicamentos genéricos são fármacos que possuem a mesma composição dos medicamentos de referência, também conhecidos como medicamentos éticos ou de marca.A utilidade dos medicamentos genéricos é vasta, pois eles oferecem os mesmos benefícios terapêuticos que os medicamentos de referência, mas a um custo significativamente menor.
           </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
-          </p>
-        </div>
-        <div>
-          <img src="../img/pediatria1.png" />
         </div>
       </article>
 
       <article class="carousel-container">
         <h3>EXPLORE</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-          ultrices convallis lectus, a varius orci gravida quis. Nunc non velit
-          non neque lobortis dignissim. Phasellus efficitur mi mattis commodo
-          ultricies.
+          Acesse o maior catálogo de bulas  digitais que você já viu! Tenha acesso a toda e qualquer bula a distância de um clique!
         </p>
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
@@ -137,22 +122,13 @@
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS GENÉRICOS</h2>
         <div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os genéricos são submetidos a rigorosos testes de bioequivalência e devem cumprir com as mesmas normas de segurança dos medicamentos de referência, garantindo a segurança do consumidor. 
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Eles têm autorização legal para substituir os medicamentos de referência, oferecendo uma alternativa segura e eficaz para tratamentos a um custo menor.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            A presença dos genéricos no mercado estimula a concorrência, o que pode levar à redução dos preços dos medicamentos de referência, beneficiando todos os consumidores
           </p>
         </div>
       </article>
