--- a/html/homeopaticos.html
+++ b/html/homeopaticos.html
@@ -56,32 +56,17 @@
 
       <article class="importance">
         <div>
-          <h2>A IMPORTÂNCIA DOS CUIDADOS HOMEOPÁTICOS</h2>
+          <h2>O QUE SÃO OS MEDICAMENTOS HOMEOPÁTICOS</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            A homeopatia é um método terapêutico que utiliza substâncias que, em grandes quantidades, provocariam os sintomas da doença que se deseja tratar. Seguindo o princípio de que “semelhante cura semelhante”, essas substâncias são utilizadas em doses ultra diluídas para estimular as defesas naturais do corpo e promover a autocura. A importância dos medicamentos homeopáticos reside em sua abordagem holística e individualizada do tratamento.
           </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
-          </p>
-        </div>
-        <div>
-          <img src="../img/pediatria1.png" />
         </div>
       </article>
 
       <article class="carousel-container">
         <h3>EXPLORE</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-          ultrices convallis lectus, a varius orci gravida quis. Nunc non velit
-          non neque lobortis dignissim. Phasellus efficitur mi mattis commodo
-          ultricies.
+          Acesse o maior catálogo de bulas  digitais que você já viu! Tenha acesso a toda e qualquer bula a distância de um clique!
         </p>
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
@@ -137,22 +122,13 @@
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS HOMEOPÁTICOS</h2>
         <div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os remédios homeopáticos são conhecidos por serem suaves e não causarem efeitos colaterais significativos, tornando-os uma opção segura para pessoas de todas as idades, incluindo idosos e bebês.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            A homeopatia foca no equilíbrio orgânico e trata a pessoa como um todo, buscando a raiz do problema para promover a melhora geral do organismo.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            São considerados seguros e eficazes, baseados em substâncias naturais e utilizam substâncias simples em microdoses.
           </p>
         </div>
       </article>
