--- a/html/similares.html
+++ b/html/similares.html
@@ -56,32 +56,17 @@
 
       <article class="importance">
         <div>
-          <h2>A IMPORTÂNCIA DOS CUIDADOS SIMILARES</h2>
+          <h2>O QUE SÃO OS MEDICAMENTOS SIMILARES</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os medicamentos similares são aqueles que contêm o mesmo ou os mesmos princípios ativos, apresentam a mesma concentração, forma farmacêutica, via de administração, posologia e indicação terapêutica que os medicamentos de referência registrados na Anvisa. Eles são equivalentes aos medicamentos registrados no órgão federal responsável pela vigilância sanitária, mas podem diferir em características como tamanho e forma do produto, prazo de validade, embalagem, rotulagem, excipientes e veículo.
           </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
-          </p>
-        </div>
-        <div>
-          <img src="../img/pediatria1.png" />
         </div>
       </article>
 
       <article class="carousel-container">
         <h3>EXPLORE</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-          ultrices convallis lectus, a varius orci gravida quis. Nunc non velit
-          non neque lobortis dignissim. Phasellus efficitur mi mattis commodo
-          ultricies.
+          Acesse o maior catálogo de bulas  digitais que você já viu! Tenha acesso a toda e qualquer bula a distância de um clique!
         </p>
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
@@ -137,22 +122,13 @@
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS SIMILARES</h2>
         <div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os remédios similares geralmente são mais acessíveis em comparação com os medicamentos de marca. Isso pode ser especialmente vantajoso para pacientes que precisam de tratamentos de longo prazo.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            Os medicamentos similares devem passar por testes rigorosos para garantir que sejam bioequivalentes aos medicamentos de marca. Isso significa que eles contêm os mesmos ingredientes ativos em concentrações semelhantes, o que resulta em efeitos terapêuticos equivalentes.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            ultrices convallis lectus, a varius orci gravida quis. Nunc non
-            velit non neque lobortis dignissim. Phasellus efficitur mi mattis
-            commodo ultricies.
+            A disponibilidade de medicamentos similares pode aumentar o acesso a tratamentos essenciais para uma variedade de condições médicas. Isso é particularmente significativo em áreas onde os custos dos medicamentos de marca podem representar um obstáculo para muitos pacientes.
           </p>
         </div>
       </article>
